# rust_register_center

./: .gitignore  Cargo.toml  README.md  start.sh
.sqlx/: query-308bed1cba42919af5b38e896c7131afbb88e53b5a5d2fe20c592ce45519fd0e.json
migrations/: 20230820091112_create_create_config.sql
scripts/: create_service_config_table.sql
src/: config.rs  discovery.rs  events.rs  lib.rs  logger.rs  main.rs  registry.rs  rest_api.rs  server.rs  service_configuration.rs  store.rs  task.rs
src/config/: struct_defs.rs
src/events/: default.rs
src/registry/: service_instance.rs
src/store/: mysql.rs  redis.rs
src/task/: async_task_scheduler.rs  task_processor.rs
tests/: config.xml  test_config.rs  test_discovery.rs  test_events.rs  test_registry.rs  test_registry_service_instance.rs  test_service_configuration.rs  test_store.rs  test_store_mysql.rs  test_task_processor.rs
tests/resources/: config_unexpected_end_of_stream.xml
