[package]
name = "rust_register_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
etcd = "0.9.0"
etcd-client = "0.11.1"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-fs = "0.1.7"
toml = "0.7.6"
