[package]
name = "rust_register_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
clap = { version = "4.3.22", features = ["derive"] }
crossbeam-channel = "0.5.8"
etcd = "0.9.0"
etcd-client = "0.11.1"
futures = "0.3.28"
log = "0.4.20"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
simplelog = "0.12.1"
sqlx = { version = "0.7.1", features = ["mysql"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-fs = "0.1.7"
toml = "0.7.6"


[[bin]]
name = "discovery_client"
path ="src/bin/discovery_client.rs"
